# rider

./: .gitignore  client.py  main.py  pyproject.toml  server.py
assets/maps/: rider.tiled-session  rider.tmx
client/: client.py
common/: constants.py  constatnts.py
model/: messages.py
server/: server.py
